tests/snapshots/snapshot_golden_comprehensive__envelope_run.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: env
---
{
  "t": "run",
  "id": "run-001",
  "work_order": {
    "id": "00000000-0000-4000-8000-000000000001",
    "task": "Refactor authentication module",
    "lane": "patch_first",
    "workspace": {
      "root": "/tmp/workspace",
      "mode": "staged",
      "include": [
        "src/**"
      ],
      "exclude": [
        "node_modules/**",
        "target/**"
      ]
    },
    "context": {
      "files": [
        "src/main.rs",
        "README.md"
      ],
      "snippets": [
        {
          "name": "hint",
          "content": "Look at the auth module"
        },
        {
          "name": "constraint",
          "content": "Do not modify tests"
        }
      ]
    },
    "policy": {
      "allowed_tools": [
        "read",
        "write",
        "glob"
      ],
      "disallowed_tools": [
        "bash",
        "delete"
      ],
      "deny_read": [
        ".env",
        "secrets/**"
      ],
      "deny_write": [
        "Cargo.lock"
      ],
      "allow_network": [
        "api.example.com"
      ],
      "deny_network": [
        "*.evil.com"
      ],
      "require_approval_for": [
        "execute"
      ]
    },
    "requirements": {
      "required": [
        {
          "capability": "tool_read",
          "min_support": "native"
        },
        {
          "capability": "streaming",
          "min_support": "emulated"
        }
      ]
    },
    "config": {
      "model": "gpt-4o",
      "vendor": {
        "temperature": 0.7,
        "top_p": 0.95
      },
      "env": {
        "RUST_LOG": "debug"
      },
      "max_budget_usd": 1.5,
      "max_turns": 25
    }
  }
}
