tests/snapshots/snapshot_golden_comprehensive__envelope_run_minimal.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: env
---
{
  "t": "run",
  "id": "run-002",
  "work_order": {
    "id": "00000000-0000-4000-8000-000000000002",
    "task": "Hello world",
    "lane": "patch_first",
    "workspace": {
      "root": ".",
      "mode": "pass_through",
      "include": [],
      "exclude": []
    },
    "context": {
      "files": [],
      "snippets": []
    },
    "policy": {
      "allowed_tools": [],
      "disallowed_tools": [],
      "deny_read": [],
      "deny_write": [],
      "allow_network": [],
      "deny_network": [],
      "require_approval_for": []
    },
    "requirements": {
      "required": []
    },
    "config": {
      "model": null,
      "vendor": {},
      "env": {},
      "max_budget_usd": null,
      "max_turns": null
    }
  }
}
