tests/snapshots/snapshot_golden_comprehensive__event_assistant_delta.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "assistant_delta",
  "text": "Hello "
}
