tests/snapshots/snapshot_golden_comprehensive__event_command_executed_failure.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "command_executed",
  "command": "cargo build",
  "exit_code": 1,
  "output_preview": "error[E0308]: mismatched types"
}
