tests/snapshots/snapshot_golden_comprehensive__event_command_executed_no_exit_code.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "command_executed",
  "command": "sleep 60",
  "exit_code": null,
  "output_preview": null
}
