tests/snapshots/snapshot_golden_comprehensive__event_command_executed_success.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "command_executed",
  "command": "cargo test",
  "exit_code": 0,
  "output_preview": "test result: ok. 42 passed"
}
