tests/snapshots/snapshot_golden_comprehensive__event_error_without_code.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "error",
  "message": "Unexpected failure"
}
