tests/snapshots/snapshot_golden_comprehensive__event_file_changed.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "file_changed",
  "path": "src/auth.rs",
  "summary": "Added JWT validation function"
}
